--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link rel="stylesheet" href="./styles.css">
  <title>Sasinda Chandula | Portfolio Website</title>
 </head>
 <body>
- <h1>Sasinda Chandula</h1>
+ <header class="header">
+  <div class="hero">
+   <div class="hero-image">
+    <!-- <img src="./Images/Sasinda Chandula 400x399.jpeg" alt="" width="200"> -->
+   </div>
+   <p>Wireless and Mobile Communication Lab, <br>
+Faculty of Engineering,<br>
+University of Jaffna,<br>
+Sri Lanka.<br>
+<a href="mailto:http://eng.sjp.ac.lk/">http://eng.sjp.ac.lk/</a> </p>
+  </div>
+  <div class="hero-description">
+   <h2>Sasinda Chandula</h2>
+   <p>Mr. W.H. Sasinda Chandula Prabhashana graduated with a <span style="white-space: nowrap;">First-Class</span>  Honours Electrical and Electronic Engineering degree from the University of Jaffna in 2021. He is currently working as a Lecturer on Contract at the Department of Electrical and Electronic Engineering. He is a member of IEEE and an Associate member of IESL. His research interests are Wireless Communications, Antennas and Propagation, Signal Processing, Computer Networks and Radio Astronomy.</p><br>
+   <a href="#">Read More...</a>
+  </div>
+ </header>
 </body>
 </html>
