--- a/index.html
+++ b/index.html
@@ -24,5 +24,15 @@ Sri Lanka.<br>
    <a href="#">Read More...</a>
   </div>
  </header>
+ <section class="test">
+  <ul>
+ 	<li style="font-size: 1rem;"><span style="font-weight: 800;"> YYYY/MM/DD :</span> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate modi nostrum laudantium error. Incidunt, fugiat optio mollitia praesentium aliquam quod iure fugit explicabo nulla quas. <span style="color: #000080;background-color: #4D91FF; padding: 0 12px; border-radius: 10px;">New</span></li>
+ 	<li style="font-size: 1rem;"><span style="font-weight: 800;"> YYYY/MM/DD :</span> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate modi nostrum laudantium error. Incidunt, fugiat optio mollitia praesentium aliquam quod iure fugit explicabo nulla quas.</li>
+ 	<li style="font-size: 1rem;"><span style="font-weight: 800;"> YYYY/MM/DD :</span> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate modi nostrum laudantium error. Incidunt, fugiat optio mollitia praesentium aliquam quod iure fugit explicabo nulla quas.</li>
+ 	<li style="font-size: 1rem;"><span style="font-weight: 800;"> YYYY/MM/DD :</span> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate modi nostrum laudantium error. Incidunt, fugiat optio mollitia praesentium aliquam quod iure fugit explicabo nulla quas.</li>
+ 	<li style="font-size: 1rem;"><span style="font-weight: 800;"> YYYY/MM/DD :</span> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate modi nostrum laudantium error. Incidunt, fugiat optio mollitia praesentium aliquam quod iure fugit explicabo nulla quas.</li>
+</ul>
+<p><span style="color: black; background-color: green; padding: 3px 12px; border-radius: 12px;">Scope</span> </p>
+ </section>
 </body>
 </html>
